# Doc-Monitor-MCP

./: BRANCHES.md  Dockerfile  LICENSE  Makefile  README.md  crawled_pages.sql  env.template  pyproject.toml  update_database.sql
db/: flyway.conf
db/migration/: V1__Create_pgvector_extension.sql  V2__Create_crawled_pages_table.sql  V3__Create_document_changes_table.sql  V4__Create_monitored_documentations_table.sql  V5__Create_indexes.sql
db/scripts/: info.sh  migrate.sh
scripts/: db_setup.py  health_check.py  setup.py  setup_flyway.py  validate_env.py
src/: __init__.py  crawling.py  database.py  doc_fetcher_mcp.py  document_workflows.py  embeddings.py  ingestion.py  openapi.py  processing.py  search.py  url_utils.py  utils.py
src/doc_fetcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: README.md  __init__.py  conftest.py  mcp_comprehensive_test_report.txt  mcp_test_report.txt  pytest.ini  test_mcp_functionality.py  test_mcp_tools_comprehensive.py  test_mcp_tools_direct.py  test_requirements.txt  test_runner.py  test_simple_mcp_tools.py
